--- a/domain/package.json
+++ b/domain/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jasmine": "^3.3.12",
+    "@types/lodash": "^4.14.130",
     "@types/virtual-dom": "^2.1.0",
     "jasmine": "^3.0.0",
     "jasmine-spec-reporter": "^4.2.1",
