--- a/gui/package.json
+++ b/gui/package.json
@@ -22,6 +22,7 @@
     "@domain": "./dist/domain/src"
   },
   "dependencies": {
+    "ag-grid-webcomponent": "^17.1.0",
     "lodash": "^4.17.11",
     "module-alias": "^2.2.0",
     "virtual-dom": "^2.1.1"
