--- a/storage/package.json
+++ b/storage/package.json
@@ -41,6 +41,7 @@
     "typescript": "3.1.6"
   },
   "_moduleAliases": {
-    "@fe": "./dist"
+    "@domain": "./dist/domain/src",
+    "@functions": "./dist/functions/src"
   }
 }
