--- a/live-dom-editor/package.json
+++ b/live-dom-editor/package.json
@@ -7,20 +7,37 @@
     "test": "test"
   },
   "scripts": {
-    "start": "concurrently --kill-others \"npm run compile:watch\" \"live-server --port=8081\"",
+    "start": "rimraf dist && concurrently --kill-others \"npm run sass:watch\" \"npm run compile:watch\" \"npm run serve\"",
+    "xserve": "live-server --watch=dist --port=8081 --ignode=\"*/node_modules,*/src\"",
+    "serve": "parcel watch index.html",
     "compile:watch": "tsc --sourceMap -w -p .",
+    "build:watch": " webpack --watch --progress --colors",
+    "sass:watch": "sass --style compressed --watch . src/live-dom-editor.scss:dist/live-dom-editor.min.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/jasmine": "^3.3.12",
+    "@types/node": "^12.0.2",
     "concurrently": "^4.1.0",
     "dom-testing-library": "^4.1.0",
     "jasmine": "^3.4.0",
     "jsdom": "^15.1.0",
     "jsdom-global": "^3.0.2",
     "live-server": "^1.2.1",
-    "typescript": "3.1.6"
+    "parcel-bundler": "^1.12.3",
+    "rimraf": "^2.6.3",
+    "sass": "^1.20.1",
+    "terser-webpack-plugin": "^1.2.4",
+    "testem": "^2.16.0",
+    "ts-loader": "^6.0.1",
+    "typescript": "3.1.6",
+    "webpack": "^4.32.1",
+    "webpack-cli": "^3.3.2",
+    "webpack-node-externals": "^1.7.2"
+  },
+  "dependencies": {
+    "delegated-events": "^1.0.10"
   }
 }
