--- a/live-dom-editor/tsconfig.json
+++ b/live-dom-editor/tsconfig.json
@@ -17,7 +17,8 @@
         "paths": {
             "*": [
                 "node_modules/*",
-            ]
+            ],
+            "@live-dom-template/*": ["../live-dom-template/src/*"],
         },
         "lib": [
             "es2018",
@@ -25,6 +26,7 @@
         ]
     },
     "include": [
-        "src/**/*"
+        "src/**/*",
+        "../live-dom-template/src/**/*",
     ]
 }
