--- a/live-dom-editor/package.json
+++ b/live-dom-editor/package.json
@@ -38,6 +38,7 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
-    "delegated-events": "^1.0.10"
+    "delegated-events": "^1.0.10",
+    "jquery": "^3.4.1"
   }
 }
