--- a/live-dom-template/package.json
+++ b/live-dom-template/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jasmine dist/template/src/frmdb-template.spec.js",
-    "compile:watch": "tsc --sourceMap -w -p src"
+    "start": "npm run compile:watch",
+    "compile:watch": "tsc --sourceMap -w -p ."
   },
   "author": "",
   "license": "ISC",
