--- a/live-dom-app/tsconfig.json
+++ b/live-dom-app/tsconfig.json
@@ -2,19 +2,31 @@
     "extends": "../tsconfig.json",
     "compileOnSave": false,
     "compilerOptions": {
+        "outDir": "./dist",
+        "baseUrl": ".",
         "sourceMap": false,
         "declaration": false,
         "moduleResolution": "node",
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "strictNullChecks": true,
-        "target": "es2018",
+        "target": "ES2018",
         "typeRoots": [
             "node_modules/@types"
         ],
+        "paths": {
+            "*": [
+                "node_modules/*",
+            ],
+            "@live-dom-template/*": ["../live-dom-template/src/*"],
+        },
         "lib": [
             "es2018",
             "dom"
         ]
-    }
+    },
+    "include": [
+        "src/**/*",
+        "../live-dom-template/src/**/*",
+    ]
 }
