--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
+/apps
 /dist
+/tsc-out
 /tmp
 /out-tsc
 
