--- a/package.json
+++ b/package.json
@@ -5,26 +5,33 @@
   "main": "index.js",
   "scripts": {
     "start": "rimraf dist && concurrently --kill-others \"npm run sass:watch\" \"npm run build:watch\" \"npm run serve\"",
-    "xserve": "live-server --ignore=*/node_modules,*/src --port=8081",
+    "inspect": "kill-port 9231 && concurrently --kill-others \"npm start || true\" \"npm run test-data\" ",
     "serve": "webpack-dev-server",
     "compile:watch": "tsc --sourceMap -w -p .",
-    "build:watch": "webpack --watch --progress --colors",
+    "build:watch": "webpack --progress --watch",
     "sass:watch": "sass --style compressed --watch . live-dom-editor/src/live-dom-editor.scss:dist/live-dom-editor.min.css",
+    "build": "webpack",
+    "be-spec": "jasmine --helper=./jasmine.helpers.js tsc-out/core/src/frmdb_engine.spec.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@google-cloud/storage": "^2.5.0",
     "@types/jasmine": "^3.3.12",
+    "@types/jquery": "^3.3.29",
     "@types/node": "^12.0.2",
     "concurrently": "^4.1.0",
     "dom-testing-library": "^4.1.0",
+    "glob": "^7.1.4",
     "install": "^0.12.2",
     "jasmine": "^3.4.0",
+    "jasmine-spec-reporter": "^4.2.1",
     "jsdom": "^15.1.0",
     "jsdom-global": "^3.0.2",
     "live-server": "^1.2.1",
     "npm": "^6.9.0",
+    "parallel-webpack": "^2.3.0",
     "rimraf": "^2.6.3",
     "sass": "^1.20.1",
     "terser-webpack-plugin": "^1.2.4",
@@ -33,14 +40,47 @@
     "typescript": "3.1.6",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.4.1",
-    "webpack-node-externals": "^1.7.2",
-    "@google-cloud/storage": "^2.5.0"
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
-    "delegated-events": "^1.0.10"
+    "delegated-events": "^1.0.10",
+    "lodash": "^4.17.11",
+    "acorn": "^5.4.1",
+    "cluster-key-slot": "^1.0.12",
+    "detect-node": "^2.0.4",
+    "dotenv": "^6.2.0",
+    "expression-eval": "git+https://github.com/acristu/expression-eval.git",
+    "fuse.js": "^3.3.0",
+    "jsep": "git+https://github.com/acristu/jsep.git",
+    "formulajs": "git+https://github.com/acristu/formula.js.git",
+    "module-alias": "^2.1.0",
+    "moment": "^2.24.0",
+    "pg": "^7.8.0",
+    "pg-promise": "^8.5.5",
+    "pouchdb-collate": "^7.0.0",
+    "short-uuid": "^3.1.0",
+    "tslib": "^1.9.3",
+    "body-parser": "~1.13.2",
+    "connect-ensure-login": "^0.1.1",
+    "cookie-parser": "~1.3.5",
+    "cross-env": "^5.2.0",
+    "debug": "~2.2.0",
+    "express": "~4.13.1",
+    "express-session": "^1.15.6",
+    "http-proxy-middleware": "^0.19.1",
+    "md5": "^2.2.1",
+    "morgan": "^1.6.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "serve-favicon": "~2.3.0",
+    "source-map-support": "^0.5.3",
+    "wait-on": "^3.2.0"
   },
-  "alias": {
-    "@live-dom-template/*": "./live-dom-template/src/*"
+  "_moduleAliases": {
+    "@live-dom-template": "./tsc-out/live-dom-template/src",
+    "@domain": "./tsc-out/domain/src",
+    "@functions": "./tsc-out/functions/src",
+    "@storage": "./tsc-out/storage/src",
+    "@core": "./tsc-out/core/src"
   }
 }
