--- a/fe/package.json
+++ b/fe/package.json
@@ -7,6 +7,7 @@
     "dev": "concurrently --kill-others \"ng serve --progress=false\" \"ng test --progress=false\" | perl -pe 's!^\\[\\d+\\] !!; s!ERROR in !!; s!^src/app/!fe/src/app/!'",
     "start": "ng serve --aot --proxy-config proxy.conf.json --source-map",
     "build": "ng build",
+    "build-el": "ng build --prod --output-hashing=none && bash -c \"cat dist/fe/{runtime,polyfills,scripts,main}.js > dist/frmdb-elements.js\"",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "cross-env TARGET=headless ng e2e --port 4300",
@@ -20,6 +21,7 @@
     "@angular/common": "^7.2.9",
     "@angular/compiler": "^7.2.9",
     "@angular/core": "^7.2.9",
+    "@angular/elements": "^7.2.9",
     "@angular/forms": "^7.2.9",
     "@angular/http": "^7.2.9",
     "@angular/platform-browser": "^7.2.9",
@@ -45,6 +47,7 @@
     "circular-json": "^0.5.9",
     "core-js": "^2.6.5",
     "d3": "^5.9.1",
+    "document-register-element": "^1.7.2",
     "expression-eval": "^2.0.0",
     "fuse.js": "^3.4.4",
     "jquery": "^3.3.1",
