refactor data-grid inputs

--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "FormulaDB low code platform",
   "main": "index.js",
   "scripts": {
-    "start": "rimraf dist && concurrently --kill-others \"npm run sass:watch\" \"npm run build:watch\" \"npm run serve\"",
+    "start:be": "node --inspect=0.0.0.0:9231 dist/be.js",
+    "start": "npm run start:be",
     "inspect": "kill-port 9231 && concurrently --kill-others \"npm start || true\" \"npm run test-data\" ",
-    "serve": "webpack-dev-server",
+    "serve": "concurrently --kill-others \"npm run compile:watch\" \"npm run bundle:watch\" \"npm run serve:be\" ",
+    "serve:be": "nodemon --delay 200ms --watch dist --exec \"npm run start:be\"",
     "compile:watch": "tsc --sourceMap -w -p .",
-    "build:watch": "webpack --progress --watch",
+    "bundle:watch": "webpack --progress --watch",
     "sass:watch": "sass --style compressed --watch . live-dom-editor/src/live-dom-editor.scss:dist/live-dom-editor.min.css",
     "build": "webpack",
     "be-spec": "jasmine --helper=./jasmine.helpers.js tsc-out/core/src/frmdb_engine.spec.js",
@@ -30,6 +32,7 @@
     "jsdom": "^15.1.0",
     "jsdom-global": "^3.0.2",
     "live-server": "^1.2.1",
+    "nodemon": "^1.19.1",
     "npm": "^6.9.0",
     "parallel-webpack": "^2.3.0",
     "rimraf": "^2.6.3",
