--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "terser-webpack-plugin": "^1.2.4",
     "testem": "^2.16.0",
     "ts-loader": "^6.0.1",
+    "ts-node": "^8.2.0",
     "typescript": "3.1.6",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.3.2",
@@ -84,6 +85,7 @@
     "@domain": "./tsc-out/domain/src",
     "@functions": "./tsc-out/functions/src",
     "@storage": "./tsc-out/storage/src",
+    "@test": "./tsc-out/test/src",
     "@core": "./tsc-out/core/src"
   }
 }
