--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "start:be": "node --inspect=0.0.0.0:9231 dist/be.js",
     "start": "npm run start:be",
     "inspect": "kill-port 9231 && concurrently --kill-others \"npm start || true\" \"npm run test-data\" ",
-    "serve": "concurrently --kill-others \"npm run compile:watch\" \"npm run bundle:watch\" \"npm run serve:be\" ",
+    "serve": "cross-env FRMDB_STORAGE=postgres concurrently --kill-others \"npm run compile:watch\" \"npm run bundle:watch\" \"npm run serve:be\" ",
     "serve:be": "nodemon --delay 200ms --watch dist --exec \"npm run start:be\"",
     "compile:watch": "tsc --sourceMap -w -p .",
-    "bundle:watch": "webpack --progress --watch",
+    "bundle:watch": "webpack --progress --watch --mode development",
     "sass:watch": "sass --style compressed --watch . live-dom-editor/src/live-dom-editor.scss:dist/live-dom-editor.min.css",
     "build": "webpack",
     "be-spec": "jasmine --helper=./jasmine.helpers.js tsc-out/core/src/frmdb_engine.spec.js",
@@ -22,6 +22,7 @@
     "@google-cloud/storage": "^2.5.0",
     "@types/jasmine": "^3.3.12",
     "@types/jquery": "^3.3.29",
+    "@types/js-yaml": "^3.12.1",
     "@types/node": "^12.0.2",
     "concurrently": "^4.1.0",
     "dom-testing-library": "^4.1.0",
@@ -37,47 +38,51 @@
     "parallel-webpack": "^2.3.0",
     "rimraf": "^2.6.3",
     "sass": "^1.20.1",
+    "source-map-loader": "^0.2.4",
     "terser-webpack-plugin": "^1.2.4",
     "testem": "^2.16.0",
     "ts-loader": "^6.0.1",
     "ts-node": "^8.2.0",
+    "tsconfig-paths": "^3.8.0",
     "typescript": "3.1.6",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.3.2",
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
-    "delegated-events": "^1.0.10",
-    "lodash": "^4.17.11",
     "acorn": "^5.4.1",
-    "cluster-key-slot": "^1.0.12",
-    "detect-node": "^2.0.4",
-    "dotenv": "^6.2.0",
-    "expression-eval": "git+https://github.com/acristu/expression-eval.git",
-    "fuse.js": "^3.3.0",
-    "jsep": "git+https://github.com/acristu/jsep.git",
-    "formulajs": "git+https://github.com/acristu/formula.js.git",
-    "module-alias": "^2.1.0",
-    "moment": "^2.24.0",
-    "pg": "^7.8.0",
-    "pg-promise": "^8.5.5",
-    "pouchdb-collate": "^7.0.0",
-    "short-uuid": "^3.1.0",
-    "tslib": "^1.9.3",
     "body-parser": "~1.13.2",
+    "cluster-key-slot": "^1.0.12",
     "connect-ensure-login": "^0.1.1",
     "cookie-parser": "~1.3.5",
     "cross-env": "^5.2.0",
+    "csv": "^5.1.1",
     "debug": "~2.2.0",
+    "delegated-events": "^1.0.10",
+    "detect-node": "^2.0.4",
+    "dotenv": "^6.2.0",
     "express": "~4.13.1",
     "express-session": "^1.15.6",
+    "expression-eval": "git+https://github.com/acristu/expression-eval.git",
+    "formulajs": "git+https://github.com/acristu/formula.js.git",
+    "fuse.js": "^3.3.0",
     "http-proxy-middleware": "^0.19.1",
+    "js-yaml": "^3.13.1",
+    "jsep": "git+https://github.com/acristu/jsep.git",
+    "lodash": "^4.17.11",
     "md5": "^2.2.1",
+    "module-alias": "^2.1.0",
+    "moment": "^2.24.0",
     "morgan": "^1.6.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "pg": "^7.8.0",
+    "pg-promise": "^8.5.5",
+    "pouchdb-collate": "^7.0.0",
     "serve-favicon": "~2.3.0",
+    "short-uuid": "^3.1.0",
     "source-map-support": "^0.5.3",
+    "tslib": "^1.9.3",
     "wait-on": "^3.2.0"
   },
   "_moduleAliases": {
