more work on reflectig properties to attributes and back

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,13 +28,15 @@
             "name": "FE serve",
             "type": "chrome",
             "request": "launch",
-            "url": "file:///D:/code/metawiz/febe/data-grid/index.html",
-            "webRoot": "/d/code/metawiz/febe",
+            "url": "http://localhost:8081",
+            "webRoot": "${workspaceFolder}",
             "sourceMapPathOverrides": {
-                "webpack:/./*": "${webRoot}/*",
-                "webpack:///./src/*": "${webRoot}/src/*",
-                "webpack:/*": "*",
-                "webpack:/./~/*": "${webRoot}/node_modules/*"
+                "webpack:///./domain/src/*": "${webRoot}/domain/src/*",
+                "webpack:///./functions/src/*": "${webRoot}/functions/src/*",
+                "webpack:///./core/src/*": "${webRoot}/core/src/*",
+                "webpack:///./web/src/*": "${webRoot}/web/src/*",
+                "webpack:///./live-dom-template/src/*": "${webRoot}/live-dom-template/src/*",
+                "webpack:///./data-grid/src/*": "${webRoot}/data-grid/src/*"
             }
         },
         {
