--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "npm run start:be",
     "inspect": "kill-port 9231 && concurrently --kill-others \"npm start || true\" \"npm run test-data\" ",
     "serve": "cross-env FRMDB_STORAGE=postgres concurrently --kill-others \"npm run compile:watch\" \"npm run bundle:watch\" \"npm run serve:be\" ",
-    "serve:be": "nodemon --delay 200ms --watch dist --exec \"npm run start:be\"",
-    "serve:fe": "live-server --watch=\"dist,data-grid/index.html\" --port=8081 --ignore=\"*/node_modules,*/src\" --no-browser -V",
+    "serve:be": "cross-env FRMDB_STORAGE=postgres nodemon --delay 200ms --watch dist/be.js --exec \"npm run start:be\"",
+    "serve:fe": "live-server --watch=\"dist,data-grid/index.html\" --port=8081 --ignore=\"*/node_modules,*/src\" --no-browser -V --proxy=/formuladb-api:http://localhost:3000/formuladb-api",
     "compile:watch": "tsc --sourceMap -w -p .",
     "bundle:watch": "webpack --progress --watch --mode development",
     "sass:watch": "sass --style compressed --watch . live-dom-editor/src/live-dom-editor.scss:dist/live-dom-editor.min.css",
