--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "FormulaDB low code platform",
   "main": "index.js",
   "scripts": {
-    "start:be": "node --inspect=0.0.0.0:9231 dist/be.js",
+    "start:be": "node --inspect=0.0.0.0:9231 dist/frmdb-be.js",
     "start": "npm run start:be",
     "inspect": "kill-port 9231 && concurrently --kill-others \"npm start || true\" \"npm run test-data\" ",
     "serve": "cross-env FRMDB_STORAGE=postgres concurrently --kill-others \"npm run compile:watch\" \"npm run bundle:watch\" \"npm run serve:be\" ",
     "serve:be": "cross-env FRMDB_STORAGE=postgres nodemon --delay 200ms --watch dist/be.js --exec \"npm run start:be\"",
     "serve:fe": "live-server --watch=\"dist,data-grid/index.html\" --port=8081 --ignore=\"*/node_modules,*/src\" --no-browser -V --proxy=/formuladb-api:http://localhost:3000/formuladb-api",
     "compile:watch": "tsc --sourceMap -w -p .",
-    "bundle:watch": "webpack --progress --watch --mode development",
+    "bundle:watch": "webpack --progress --watch --mode production",
     "sass:watch": "sass --style compressed --watch . live-dom-editor/src/live-dom-editor.scss:dist/live-dom-editor.min.css",
     "build": "webpack",
     "be-spec": "jasmine --helper=./jasmine.helpers.js tsc-out/core/src/frmdb_engine.spec.js",
@@ -44,7 +44,7 @@
     "sass": "^1.20.1",
     "sass-loader": "^7.1.0",
     "source-map-loader": "^0.2.4",
-    "terser-webpack-plugin": "^1.2.4",
+    "terser-webpack-plugin": "^1.3.0",
     "testem": "^2.16.0",
     "ts-loader": "^6.0.1",
     "ts-node": "^8.2.0",
