--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "description": "FormulaDB low code platform",
   "main": "index.js",
   "scripts": {
-    "start:be": "node --inspect=0.0.0.0:9231 dist/frmdb-be.js",
-    "start": "npm run start:be",
-    "inspect": "kill-port 9231 && concurrently --kill-others \"npm start || true\" \"npm run test-data\" ",
-    "serve": "cross-env FRMDB_STORAGE=postgres concurrently --kill-others \"npm run compile:watch\" \"npm run bundle:watch\" \"npm run serve:be\" ",
-    "serve:be": "cross-env FRMDB_STORAGE=postgres nodemon --delay 200ms --watch dist/be.js --exec \"npm run start:be\"",
-    "serve:fe": "live-server --watch=\"dist,data-grid/index.html\" --port=8081 --ignore=\"*/node_modules,*/src\" --no-browser -V --proxy=/formuladb-api:http://localhost:3000/formuladb-api",
-    "compile:watch": "tsc --sourceMap -w -p .",
-    "bundle:watch": "webpack --progress --watch --mode production",
-    "sass:watch": "sass --style compressed --watch . live-dom-editor/src/live-dom-editor.scss:dist/live-dom-editor.min.css",
-    "build": "webpack",
-    "be-spec": "jasmine --helper=./jasmine.helpers.js tsc-out/core/src/frmdb_engine.spec.js",
-    "test": "node --inspect=0.0.0.0:9232 jasmine.js"
+    "start": "node --inspect=0.0.0.0:9231 dist/frmdb-be.js",
+    "serve:docker": "cross-env FRMDB_RELEASE=${npm_package_version} nodemon --delay 250ms --watch dist/frmdb-be.js --exec \"npm run docker && docker-compose up -d\"",
+    "serve:maps": "npm run serve:docker -- maps",
+    "serve:apps": "live-server --watch=\"dist,apps\" --port=8081 ",
+    "docker": "npm run docker:maps && npm run docker:febe",
+    "docker:febe": "docker build -t formuladb-febe -f Dockerfile.febe . && docker tag formuladb-febe registry.gitlab.com/metawiz/febe/formuladb-febe:${npm_package_version}",
+    "docker:maps": "docker build -t formuladb-maps -f Dockerfile.maps . && docker tag formuladb-maps registry.gitlab.com/metawiz/febe/formuladb-maps:${npm_package_version}",
+    "compile": "tsc --sourceMap -p .",
+    "compile:watch": "npm run compile -- -w",
+    "bundle": "webpack",
+    "bundle:watch": "webpack --progress --watch --mode development",
+    "spec:be": "jasmine --helper=./jasmine.helpers.js tsc-out/core/src/frmdb_engine.spec.js",
+    "test": "npm run spec:be"
   },
   "author": "",
   "license": "ISC",
@@ -25,9 +26,9 @@
     "@types/jquery": "^3.3.29",
     "@types/js-yaml": "^3.12.1",
     "@types/node": "^12.0.2",
+    "browser-sync": "^2.26.7",
     "concurrently": "^4.1.0",
     "css-loader": "^2.1.1",
-    "dom-testing-library": "^4.1.0",
     "glob": "^7.1.4",
     "install": "^0.12.2",
     "jasmine": "^3.4.0",
@@ -64,7 +65,7 @@
     "cookie-parser": "~1.3.5",
     "cross-env": "^5.2.0",
     "csv": "^5.1.1",
-    "debug": "~2.2.0",
+    "debug": "^2.2.0",
     "delegated-events": "^1.0.10",
     "detect-node": "^2.0.4",
     "dotenv": "^6.2.0",
@@ -84,7 +85,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^7.8.0",
-    "pg-promise": "^8.5.5",
+    "pg-promise": "8.2.1",
     "pouchdb-collate": "^7.0.0",
     "serve-favicon": "~2.3.0",
     "short-uuid": "^3.1.0",
