--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,15 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-/dist
-/tsc-out
-/tmp
-/out-tsc
+dist
+index.html
+index.css
+tsc-out
+tmp
+out-tsc
 
 # dependencies
-/node_modules
+node_modules
 /node
 
 #data
