--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,12 +30,10 @@ buildprodimages:
     - docker build -t formuladb-minio -f Dockerfile.minio .
     - docker tag formuladb-minio registry.gitlab.com/metawiz/febe/formuladb-minio:${CI_COMMIT_TAG}
     - docker push registry.gitlab.com/metawiz/febe/formuladb-minio:${CI_COMMIT_TAG}
-    - docker build -t formuladb-sourcemaps -f Dockerfile.map .
-    - docker tag formuladb-sourcemaps registry.gitlab.com/metawiz/febe/formuladb-sourcemaps:${CI_COMMIT_TAG}
-    - docker push registry.gitlab.com/metawiz/febe/formuladb-sourcemaps:${CI_COMMIT_TAG}
-    - docker build -t formuladb-be -f Dockerfile.be .
-    - docker tag formuladb-be registry.gitlab.com/metawiz/febe/formuladb-be:${CI_COMMIT_TAG}
-    - docker push registry.gitlab.com/metawiz/febe/formuladb-be:${CI_COMMIT_TAG}
+    # - npm run docker:maps
+    # - docker push registry.gitlab.com/metawiz/febe/formuladb-sourcemaps:${CI_COMMIT_TAG}
+    - npm run docker:febe
+    - docker push registry.gitlab.com/metawiz/febe/formuladb-febe:${CI_COMMIT_TAG}
   cache:
     key: ${CI_COMMIT_SHORT_SHA}
     paths:
